--- a/client/src/browse/Filters.css
+++ b/client/src/browse/Filters.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     /* Prevent scaled images from appearing over this element */
     z-index: 10;
@@ -28,7 +29,20 @@
 
 .result-count {
     text-align: center;
-    align-self: center;
     margin: 0 20px;
     color: rgba(0, 0, 0, 0.7);
+}
+
+.upload-button {
+    margin: 0 20px;
+    font-size: 1.5rem;
+    transition: color 0.2s;
+}
+
+.upload-button:hover {
+    color: rgba(0, 0, 0, 1);
+}
+
+.upload-button, .upload-button:visited {
+    color: rgba(0, 0, 0, 0.3);
 }
