--- a/client/src/browse/MediaCard.css
+++ b/client/src/browse/MediaCard.css
@@ -1,7 +1,6 @@
 
 .card {
     margin: 20px 5px;
-    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
     width: 250px;
     background-color: #ffffff;
 }
@@ -43,6 +42,7 @@
 
 .no-source {
     font-style: italic;
+    font-weight: normal;
 }
 
 .tag {
