--- a/client/src/browse/Filters.css
+++ b/client/src/browse/Filters.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
 
     /* Prevent scaled images from appearing over this element */
     z-index: 10;
@@ -45,4 +44,10 @@
 
 .upload-button, .upload-button:visited {
     color: rgba(0, 0, 0, 0.3);
+}
+
+.info-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
