--- a/client/src/upload/Upload.css
+++ b/client/src/upload/Upload.css
@@ -6,21 +6,8 @@
     flex-grow: 1;
 }
 
-.container img {
-    object-fit: contain;
-    max-width: 100%;
-}
-
-.container img, .spacer {
+.spacer {
     flex-grow: 1;
-}
-
-.button {
-    padding: 8px;
-    margin: 20px;
-    cursor: pointer;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .container input[type="file"] {
