Make the grid look less weird with a small number of images in a row

--- a/client/src/browse/Board.css
+++ b/client/src/browse/Board.css
@@ -2,7 +2,7 @@
 .board {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .no-more {
