--- a/client/src/browse/Fullscreen.css
+++ b/client/src/browse/Fullscreen.css
@@ -10,23 +10,19 @@
     color: #eaeaea;
 
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
 }
 
-.modal-container img {
+img {
     object-fit: contain;
-    max-width: 100vw;
-    max-height: 100vh;
-}
-
-.image-container {
-    align-items: center;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .info {
-    text-align: center;
     position: absolute;
+    margin: 20px;
     top: 0;
     left: 0;
     right: 0;
